@@ -17,8 +17,8 @@
 
 package org.openqa.selenium.grid.server;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import static java.util.Collections.emptyList;
+
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -38,7 +38,7 @@ public class NetworkOptions {
 
   private final Config config;
   // These are commonly used by process which can't set various headers.
-  private final Set<String> SKIP_CHECKS_ON = ImmutableSet.of("/status", "/readyz");
+  private final Set<String> SKIP_CHECKS_ON = Set.of("/status", "/readyz");
 
   public NetworkOptions(Config config) {
     this.config = Require.nonNull("Config", config);
@@ -68,7 +68,7 @@ public class NetworkOptions {
     if (checkOrigin || allowedOrigins.isPresent()) {
       toReturn =
           toReturn.andThen(
-              new CheckOriginHeader(allowedOrigins.orElse(ImmutableList.of()), SKIP_CHECKS_ON));
+              new CheckOriginHeader(allowedOrigins.orElse(emptyList()), SKIP_CHECKS_ON));
     }
 
     return toReturn;
