@@ -27,7 +27,6 @@ import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.Browser.CHROME;
 import static org.openqa.selenium.remote.Browser.FIREFOX;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
@@ -66,9 +65,9 @@ class RemoteWebDriverBuilderTest {
       new HttpResponse()
           .setContent(
               Contents.asJson(
-                  ImmutableMap.of(
+                  Map.of(
                       "value",
-                      ImmutableMap.of(
+                      Map.of(
                           "sessionId",
                           SESSION_ID,
                           // Primula is a canned cheese. Boom boom!
@@ -399,9 +398,9 @@ class RemoteWebDriverBuilderTest {
         new HttpResponse()
             .setContent(
                 Contents.asJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "sessionId",
                             SESSION_ID,
                             "capabilities",
@@ -441,9 +440,9 @@ class RemoteWebDriverBuilderTest {
         new HttpResponse()
             .setContent(
                 Contents.asJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "sessionId",
                             SESSION_ID,
                             "capabilities",
@@ -483,9 +482,9 @@ class RemoteWebDriverBuilderTest {
         new HttpResponse()
             .setContent(
                 Contents.asJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "sessionId",
                             SESSION_ID,
                             "capabilities",
